Admin side products, categories and customers working fine without any known bugs.

--- a/views/admin/category folder/category_list.ejs
+++ b/views/admin/category folder/category_list.ejs
@@ -15,7 +15,7 @@
                 <div class="mt-4 mx-2 text-sm text-gray-500">
                     <a class="text-blue-500" href="/admin/home">Dashboard</a>
                     &gt;
-                    <span>Product List</span>
+                    <span>Category List</span>
                 </div>
                 <% if (successMessage) { %>
                     <div id="success_div" class="bg-green-500 text-white p-2 mb-5 text-center rounded transition-opacity duration-500 ease-in-out">
