--- a/views/admin/product folder/product_list.ejs
+++ b/views/admin/product folder/product_list.ejs
@@ -84,7 +84,7 @@
                                             <%= product.rating %>
                                         </td>
                                         <td class="py-2">
-                                            <%= product.category.name %>
+                                            <%= product.category?.name %>
                                         </td>
                                         <td class="py-2">
                                             <%= product.inventory %>
