--- a/views/partials/admin/side bar.ejs
+++ b/views/partials/admin/side bar.ejs
@@ -31,7 +31,7 @@
                 </a>
             </li>
             <li class="mb-4">
-                <a class="flex items-center text-gray-600 hover:bg-gray-200 rounded-md" href="#">
+                <a class="flex items-center text-gray-600 hover:bg-gray-200 rounded-md" href="/admin/users">
                     <i class="fas fa-users mr-3"></i>
                     Customers
                 </a>
