--- a/views/admin/product folder/edit_product.ejs
+++ b/views/admin/product folder/edit_product.ejs
@@ -95,10 +95,10 @@
                                                 <img src="" id="croppedImg3" alt="">
                                                 <button type="button" id="saveButton3" class="btn-sm btn-primary">Save</button>
                                             </div>
-                                        </div> --
-                                        <div
+                                        </div> -->
+                                        <!-- <div
                                             class="mt-4 border-dashed border-2 border-gray-300 p-6 rounded-md text-center">
-                                            <!-- <input type="file" name="image" multiple> -->
+                                            <input type="file" name="image" multiple> 
                                             <i class="fas fa-image text-4xl text-gray-300"></i>
                                             <p class="mt-2 text-gray-500">Drag and drop image here, or click add
                                                 image
@@ -107,7 +107,7 @@
                                                 class="mt-4 px-4 py-2 bg-purple-500 text-white rounded-md">Add
                                                 Image
                                             </button>
-                                        </div>
+                                        </div> -->
                                     </div>
                                     <div class="mt-6 bg-white p-6 rounded-lg shadow-md">
                                         <h3 class="text-lg font-semibold text-gray-700">Pricing</h3>
