--- a/views/admin/product folder/product_details.ejs
+++ b/views/admin/product folder/product_details.ejs
@@ -14,6 +14,10 @@
                         <div class="p-6 flex-1">
                             <div class="flex justify-between items-center">
                                 <h2 class="text-2xl font-semibold text-gray-700">Product Details</h2>
+                                <span class="flex justify-end mt-6">
+                                    <a href="/admin/editProduct/?id=<%= productDetails._id %>"
+                                        class="ml-2 px-6 py-2 bg-purple-500 text-white rounded-md">Edit ?</a>
+                                </span>
                             </div>
                             <div class="mt-4 text-sm text-gray-500">
                                 <a href="/admin/home" class="text-blue-500">Dashboard</a>
@@ -53,7 +57,14 @@
                             <div class="mt-6 bg-white p-6 rounded-lg shadow-md">
                                 <h3 class="text-lg font-semibold text-gray-700">Media</h3>
                                 <b><h4 class="text-gray-800 mt-2">Image Preview:</h4></b>
-                                <img src="#" alt="Product Image" class="mt-4 w-32 h-32">
+                                <div class="flex">
+                                    <% productDetails.image.forEach((image,index)=>{ %>
+                                        <img src="uploads/product-images/<%= image %>" alt="Product Image" class="mx-4 mt-2 w-40 h-40 rounded-md shadow-xl">
+                                    <% }) %>
+                                    <% if(!productDetails.image.length) { %>
+                                        <img src="images/no_productImage.png" alt="default Image" class="mt-4 w-36 h-36 rounded-md">
+                                    <% } %>
+                                </div>
                             </div>
                             <div class="mt-6 bg-white p-6 rounded-lg shadow-md">
                                 <h3 class="text-lg font-semibold text-gray-700">Pricing</h3>
@@ -79,17 +90,13 @@
                                 </div>
                             </div>
                             <div class="mt-6 bg-white p-6 rounded-lg shadow-md">
-                                <h3 class="text-lg font-semibold text-gray-700">Inventory</h3>
-                                <div class="mt-4">
-                                    <b><h4 class="block text-gray-600">Quantity</h4></b>
-                                    <p class="text-gray-800 mt-2"><%= productDetails.inventory %></p>
-                                </div>
+                                <b><h4 class="block text-gray-600">Inventory</h4></b>
+                                <p class="text-gray-800 mt-2"><%= productDetails.inventory %></p>
                             </div>
                         </div>
                         <!-- Right Sidebar -->
                         <div class="flex flex-col w-70 p-6">
                             <div class="mt-6 bg-white p-6 rounded-lg shadow-md">
-                                <h3 class="text-lg font-semibold text-gray-700">Category</h3>
                                 <div class="mt-4">
                                     <b><h4 class="block text-gray-600">Product Category</h4></b>
                                     <p class="text-gray-800 mt-2"><%= productDetails.category.name %></p>
@@ -100,23 +107,25 @@
                                 </div>
                             </div>
                             <div class="mt-6 bg-white p-6 rounded-lg shadow-md">
-                                <h3 class="text-lg font-semibold text-gray-700">Status</h3>
-                                <div class="mt-4">
-                                    <b><h4 class="block text-gray-600">Product Status</h4></b>
-                                    <p class="text-gray-800 mt-2"><%= productDetails.status %></p>
-                                </div>
+                                <b><h4 class="block text-gray-600">Product Status</h4></b>
+                                <% if(productDetails.status==="Available"){ %>
+                                    <span class="bg-green-100 text-green-600 px-2 py-1 mt-4 rounded-md">
+                                        <%= productDetails.status %>
+                                    </span>
+                                <% } else if(productDetails.status==="Out of Stock"){ %>
+                                        <span class="bg-red-100 text-red-600 px-2 py-1 mt-4 rounded-md">
+                                            <%= productDetails.status %>
+                                        </span>
+                                <% } else { %>
+                                        <span class="bg-yellow-100 text-yellow-600 px-2 py-1 mt-4 rounded-md">
+                                            Only <%= productDetails.inventory %> Left
+                                        </span>
+                                <% } %>
                             </div>
                             <div class="mt-6 bg-white p-6 rounded-lg shadow-md">
-                                <h3 class="text-lg font-semibold text-gray-700">Is Listed</h3>
-                                <div class="mt-4">
-                                    <b><h4 class="block text-gray-600">Is Listed</h4></b>
-                                    <p class="text-gray-800 mt-2"><%= productDetails.isListed ? 'Yes' : 'No' %></p>
-                                </div>
+                                <b><h4 class="block text-gray-600">Is Listed</h4></b>
+                                <p class="text-gray-800 mt-2"><%= productDetails.isListed ? 'Yes' : 'No' %></p>
                             </div>
-                        </div>
-                        <div class="flex justify-end mt-6">
-                            <a href="/admin/editProduct/?id=<%= productDetails._id %>"
-                                class="ml-2 px-6 py-2 bg-purple-500 text-white rounded-md">Edit?</a>
                         </div>
                     </div>
                 </div>
